// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

syntax = "proto3";

package com.example.replicated.set.domain;

option java_outer_classname = "SomeSetDomain";

message SomeElement {
  string value = 1;
}
